--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -11,6 +11,8 @@ html {
     height: 100%;
 }
 
+
+
 h1,
 h2,
 h3,
@@ -346,4 +348,9 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+.projectul {
+    list-style-type: none;
+    text-align: left;
 }
